fixed the spacing for smaller screens

--- a/styles.css
+++ b/styles.css
@@ -536,3 +536,39 @@ body.dark-mode .side-icons .icons:hover{
 body.dark-mode .side-icons  a{
   color: white !important;
 }
+
+@media (max-width: 768px) {
+  .side-icons {
+    width: 50px;
+    height: auto;
+    padding: 10px 0;
+    gap: 15px;
+  }
+
+  .icons {
+    width: 30px;
+    height: 30px;
+  }
+
+  .side-icons a {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 425px){
+  .side-icons {
+    width: 42px;
+    height: auto;
+    padding: 10px 0;
+    gap: 10px;
+  }
+
+  .icons {
+    width: 25px;
+    height: 25px;
+  }
+
+  .side-icons a {
+    font-size: 16px;
+  }
+}
